refactor(backend): resolve warning "HHH90003004: firstResult/maxResults specified with collection fetch; applying in memory" https://medium.com/@enisserbest/efficient-collection-fetching-and-pagination-with-hibernate-6-and-spring-data-jpa-8c716a131cc4